@@ -63,16 +63,17 @@ public final class master_jsp extends org.apache.jasper.runtime.HttpJspBase
   Map<Text, MetaRegion> onlineRegions = master.getOnlineMetaRegions();
   Map<String, HServerInfo> serverToServerInfos =
     master.getServersToServerInfo();
+  int interval = conf.getInt("hbase.regionserver.msginterval", 6000)/1000;
 
       out.write("<?xml version=\"1.0\" encoding=\"UTF-8\" ?>\n<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Transitional//EN\" \n  \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd\"> \n<html xmlns=\"http://www.w3.org/1999/xhtml\">\n<head><meta http-equiv=\"Content-Type\" content=\"text/html;charset=UTF-8\"/>\n<title>Hbase Master: ");
       out.print( master.getMasterAddress());
       out.write("</title>\n<link rel=\"stylesheet\" type=\"text/css\" href=\"/static/hbase.css\" />\n</head>\n\n<body>\n\n<a id=\"logo\" href=\"http://wiki.apache.org/lucene-hadoop/Hbase\"><img src=\"/static/hbase_logo_med.gif\" alt=\"Hbase Logo\" title=\"Hbase Logo\" /></a>\n<h1 id=\"page_title\">Master: ");
       out.print(master.getMasterAddress());
-      out.write("</h1>\n<p id=\"links_menu\"><a href=\"/hql.jsp\">HQL</a>, <a href=\"/logs/\">Local logs</a>, <a href=\"/stacks\">Thread Dump</a></p>\n<hr id=\"head_rule\" />\n\n<h2>Master Attributes</h2>\n<table>\n<tr><th>Attribute Name</th><th>Value</th></tr>\n<tr><td>Filesystem</td><td>");
+      out.write("</h1>\n<p id=\"links_menu\"><a href=\"/hql.jsp\">HQL</a>, <a href=\"/logs/\">Local logs</a>, <a href=\"/stacks\">Thread Dump</a>, <a href=\"/logLevel\">Log Level</a></p>\n<hr id=\"head_rule\" />\n\n<h2>Master Attributes</h2>\n<table>\n<tr><th>Attribute Name</th><th>Value</th><th>Description</th></tr>\n<tr><td>Filesystem</td><td>");
       out.print( conf.get("fs.default.name") );
-      out.write("</td></tr>\n<tr><td>Hbase Root Directory</td><td>");
+      out.write("</td><td>Filesystem hbase is running on</td></tr>\n<tr><td>Hbase Root Directory</td><td>");
       out.print( master.getRootDir().toString() );
-      out.write("</td></tr>\n</table>\n\n<h2>Online META Regions</h2>\n");
+      out.write("</td><td>Location of hbase home directory</td></tr>\n</table>\n\n<h2>Online META Regions</h2>\n");
  if (rootLocation != null) { 
       out.write("\n<table>\n<tr><th>Name</th><th>Server</th></tr>\n<tr><td>");
       out.print( HConstants.ROOT_TABLE_NAME.toString() );
@@ -102,7 +103,7 @@ public final class master_jsp extends org.apache.jasper.runtime.HttpJspBase
       out.print(msg );
       out.write("</p>\n\n<h2>Region Servers</h2>\n");
  if (serverToServerInfos != null && serverToServerInfos.size() > 0) { 
-      out.write("\n<table>\n<tr><th>Address</th><th>Start Code</th><th>Load</th></tr>\n");
+      out.write("\n<table>\n<tr><th>Address</th><th>Start Code</th><th>Load</th></tr>\n\n");
    for (Map.Entry<String, HServerInfo> e: serverToServerInfos.entrySet()) {
        HServerInfo hsi = e.getValue();
        String url = "http://" +
@@ -123,7 +124,9 @@ public final class master_jsp extends org.apache.jasper.runtime.HttpJspBase
       out.print( load );
       out.write("</tr>\n");
    } 
-      out.write("\n</table>\n");
+      out.write("\n</table>\n<p>Load is requests per <em>hbase.regionsserver.msginterval</em> (");
+      out.print(interval);
+      out.write(" second(s)) and count of regions loaded</p>\n");
  } 
       out.write("\n</body>\n</html>\n");
     } catch (Throwable t) {
